[development] Auto commit on 2026-01-29 12:02:41 | Files: src/main/java/com/emenu/config/OpenApiConfig.java src/main/java/com/emenu/exception/GlobalExceptionHandler.java src/main/java/com/emenu/features/audit/controller/AuditLogController.java src/main/java/com/emenu/features/audit/dto/filter/AuditLogFilterDTO.java src/main/java/com/emenu/features/audit/mapper/AuditLogMapper.java src/main/java/com/emenu/features/audit/models/AuditLog.java src/main/java/com/emenu/features/audit/repository/AuditLogRepository.java src/main/java/com/emenu/features/audit/service/AuditLogService.java src/main/java/com/emenu/features/audit/service/impl/AuditLogServiceImpl.java src/main/java/com/emenu/features/auth/controller/RoleController.java src/main/java/com/emenu/features/auth/controller/SessionController.java src/main/java/com/emenu/features/auth/dto/filter/BusinessFilterRequest.java src/main/java/com/emenu/features/auth/dto/filter/BusinessOwnerFilterRequest.java src/main/java/com/emenu/features/auth/dto/filter/RoleFilterRequest.java src/main/java/com/emenu/features/auth/dto/filter/UserFilterRequest.java src/main/java/com/emenu/features/auth/dto/request/BusinessCreateRequest.java src/main/java/com/emenu/features/auth/dto/request/BusinessOwnerChangePlanRequest.java src/main/java/com/emenu/features/auth/dto/request/BusinessOwnerCreateRequest.java src/main/java/com/emenu/features/auth/dto/request/BusinessOwnerSubscriptionCancelRequest.java src/main/java/com/emenu/features/auth/dto/request/BusinessOwnerSubscriptionRenewRequest.java src/main/java/com/emenu/features/auth/dto/request/BusinessSettingCreateRequest.java src/main/java/com/emenu/features/auth/dto/request/LoginRequest.java src/main/java/com/emenu/features/auth/dto/request/RefreshTokenRequest.java src/main/java/com/emenu/features/auth/dto/request/RegisterRequest.java src/main/java/com/emenu/features/auth/dto/request/SocialAuthRequest.java src/main/java/com/emenu/features/auth/dto/session/AdminSessionResponse.java src/main/java/com